# leptonic-template-csr

./: .gitignore  Cargo.toml  justfile
src/: app.rs  error_template.rs
